[tool.ruff]
target-version = 'py310'
line-length = 88

[tool.ruff.lint]
select = ['E', 'W', 'F', 'I', 'UP', 'C4']

[tool.pytest.ini_options]
testpaths = ['tests']
python_files = ['test_*.py']
python_classes = ['Test*']
python_functions = ['test_*']
pythonpath = ['.']

[project]
name = 'leetcode-solutions'
version = '1.1.0'
requires-python = '>=3.10'
dependencies = [
    'requests',
    'pre-commit'
]

[project.optional-dependencies]
dev = [
    'pytest',
    'ruff',
]
